@@ -17,6 +17,7 @@ gnome-commander 1.2.8.2
 ---------------
 
 Bug fixes:
+ * Fixed problem #591944 (permissions set to 000 after chmod)
 
 
 ===================================
